testtools NEWS
++++++++++++++

Changes and improvements to testtools_, grouped by release.


NEXT
~~~~

1.1.0
~~~~~

Improvements
------------

* Exceptions in a ``fixture.getDetails`` method will no longer mask errors
  raised from the same fixture's ``setUp`` method.
  (Robert Collins, #1368440)

1.0.0
~~~~~

Long overdue, we've adopted a backwards compatibility statement and recognized
that we have plenty of users depending on our behaviour - calling our version
1.0.0 is a recognition of that.

Improvements
------------

* Fix a long-standing bug where tearDown and cleanUps would not be called if the
  test run was interrupted. This should fix leaking external resources from
  interrupted tests.
  (Robert Collins, #1364188)

* Fix a long-standing bug where calling sys.exit(0) from within a test would
  cause the test suite to exit with 0, without reporting a failure of that
  test. We still allow the test suite to be exited (since catching higher order
  exceptions requires exceptional circumstances) but we now call a last-resort
  handler on the TestCase, resulting in an error being reported for the test.
  (Robert Collins, #1364188)

* Fix an issue where tests skipped with the ``skip``* family of decorators would
  still have their ``setUp`` and ``tearDown`` functions called.
  (Thomi Richards, #https://github.com/testing-cabal/testtools/issues/86)

* We have adopted a formal backwards compatibility statement (see hacking.rst)
  (Robert Collins)

0.9.39
~~~~~~

Brown paper bag release - 0.9.38 was broken for some users,
_jython_aware_splitext was not defined entirely compatibly.
(Robert Collins, #https://github.com/testing-cabal/testtools/issues/100)

0.9.38
~~~~~~

Bug fixes for test importing.

Improvements
------------

* Discovery import error detection wasn't implemented for python 2.6 (the
  'discover' module). (Robert Collins)

* Discovery now executes load_tests (if present) in __init__ in all packages.